--- a/onlinestore/package.json
+++ b/onlinestore/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/jwt-decode": "^2.2.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
