--- a/onlinestore/package.json
+++ b/onlinestore/package.json
@@ -14,6 +14,7 @@
     "@types/jwt-decode": "^2.2.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.0.2",
