--- a/onlinestore/package.json
+++ b/onlinestore/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "15.0.2",
     "pg": "^8.13.1",
     "react": "19.0.0-rc-02c0e824-20241028",
