--- a/onlinestore/.env
+++ b/onlinestore/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+#It should be noted that this information should NEVER be made public, but for the purpose of this course project this is made purposefully public
 DATABASE_URL=postgresql://postgres:eecs4413@localhost:5433/postgres
 JWT_SECRET=eecs4413
